test/compile-fail/scope/use-crate-name/expected.txt
error: unresolved import `a`
 --> top.rhdl:1:11
  |
1 | use crate::a;
  |            ^ no `a` in `crate`
